xserver-xorg-input-vmmouse (1:12.6.5-4) UNRELEASED; urgency=low

  * Add 10-vmmouse.conf.
  * Add 69-xorg-vmmouse.rules, needed to set ID_INPUT.tags.
  * Add 01-enable-detect-in-kvm.diff, closes #525039.
  * Don't install the hal fdi anymore, it's obsolete.

 -- Timo Aaltonen <tjaalton@ubuntu.com>  Tue, 30 Mar 2010 16:01:35 +0300

xserver-xorg-input-vmmouse (1:12.6.5-3) unstable; urgency=low

  [ Julien Cristau ]
  * Rename the build directory to not include DEB_BUILD_GNU_TYPE for no
    good reason.  Thanks, Colin Watson!
  * Remove myself from Uploaders

  [ Brice Goglin ]
  * Pull from upstream master branch up to commit aca67eca.
    + Stop using xf86LoaderReqSymLists since it was removed from the
      server, closes: #568403.

 -- Brice Goglin <bgoglin@debian.org>  Thu, 04 Feb 2010 19:39:57 +0100

xserver-xorg-input-vmmouse (1:12.6.5-2) experimental; urgency=low

  [ Timo Aaltonen ]
  * Build against Xserver 1.7.

  [ Cyril Brulebois ]
  * Upload to experimental.

 -- Cyril Brulebois <kibi@debian.org>  Sat, 05 Dec 2009 23:20:15 +0100

xserver-xorg-input-vmmouse (1:12.6.5-1) unstable; urgency=low

  * New upstream release.
  * Bump Standards-Version to 3.8.3 now that we have README.source.

 -- Brice Goglin <bgoglin@debian.org>  Fri, 04 Sep 2009 14:29:46 +0200

xserver-xorg-input-vmmouse (1:12.6.4-1) unstable; urgency=low

  * New upstream release.

 -- Brice Goglin <bgoglin@debian.org>  Mon, 11 May 2009 20:13:16 +0200

xserver-xorg-input-vmmouse (1:12.6.3-2) unstable; urgency=low

  * Upload to unstable.

 -- Julien Cristau <jcristau@debian.org>  Thu, 09 Apr 2009 16:35:55 +0100

xserver-xorg-input-vmmouse (1:12.6.3-1) experimental; urgency=low

  * New upstream release.
  * Drop patch vmmouse_scale_input_data.diff, it's been fixed upstream a while
    back.
  * Run autoreconf at build time.  Build-depend on automake, libtool and
    xutils-dev.
  * Handle parallel builds.
  * Install a detection program, a hal fdi file and a callout script for X